# lignum

./: .gitignore  LICENSE  Makefile  NEWS.MD  README.md  mkdocs.yml  test.cpp
.github/workflows/: docs.yml  py-check.yml  r-check.yml
R-package/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  configure
R-package/R/: cpp11.R  lignum.R
R-package/inst/tinytest/: test_binary_io.R  test_lightgbm.R  test_xgboost.R
R-package/man/: lignum-package.Rd  lignum.Rd  load_model.Rd  predict.lignum_model.Rd  save_model.Rd
R-package/src/: Makevars.win  cpp11.cpp  lignum_types.hpp  r_wrapper.cpp
benchmarks/: bench_lightgbm.py  bench_treelite.py  bench_xgboost.py
docs/: api.md  index.md
include/: builder.hpp  io.hpp  ir.hpp  lignum.hpp  model.hpp  parsers.hpp
py-package/: README.md  lignum_core.cpp  pyproject.toml
py-package/src/lignum/: __init__.py
py-package/tests/: test_binary_io.py  test_lightgbm.py  test_xgboost.py
py_package/: CMakeLists.txt  lignum_core.cpp
py_package/src/lignum/: __init__.py
py_package/tests/: dummy_model_lgb.json  dummy_model_xgb.json  test_X.csv  test_model.py  test_preds_lgb.csv  test_preds_xgb.csv
src_core/: builder.cpp  io.cpp  load.cpp  model.cpp  parser_lightgbm.cpp  parser_xgboost.cpp
