[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "lignum"
version = "0.1.0"
# description = "..."
# readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0"
]

[tool.scikit-build]
cmake.minimum-version = "3.18"