[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "lignum"
version = "0.1.0"
description = "Ultra-fast decision tree inference library via native C++ and mmap"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "../LICENSE" }
authors = [
    { name = "Kacper Piotrowski" }
]
dependencies = [
    "numpy>=1.20.0"
]

[tool.scikit-build]
cmake.version = ">=3.18"